# 5101_train_ticket_prediction

./: 0_country_selection.ipynb  1_feature_gen_data_cleaning.ipynb  2_model_training.ipynb  pyproject.toml
