[project]
name = "train-sales-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Reagan",email = "rrr.chanhiulok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "holidays (>=0.80,<0.81)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
